@@ -1358,3 +1358,4 @@ Updated the SugarCRM script installer to version 6.5.2, WHCMS to 5.1.2, Django t
 Alias virtual servers that have their own mailboxes and aliases can now be created, rather than always forwarding mail to the destination domain.
 When installing Ruby scripts, dependencies like gcc and libfcgi-devel are now installed automatically if possible.
 The outgoing IP address for email sent from a domain can now be configured to match the domain's IP, when using Postfix 2.7 or above.
+If the system's primary IP address has changed, display a warning message and prompt to update all virtual servers on the old IP.
